# devops

./: COMPARISON.md  Jenkinsfile
bazel_project/: .bazelrc  MODULE.bazel  SETUP.md  bazel-bazel_project  bazel-bin  bazel-out  bazel-testlogs
bazel_project/app/: BUILD
bazel_project/app/src/: main.cpp
bazel_project/app/test/: app_test.cpp
bazel_project/mathx/: BUILD
bazel_project/mathx/src/: mathx.cpp  mathx.h
bazel_project/mathx/test/: mathx_test.cpp
bazel_project/read/: BUILD
bazel_project/read/src/: read.cpp  read.h
bazel_project/read/test/: read_test.cpp
bazel_project/write/: BUILD
bazel_project/write/src/: write.cpp  write.h
maven_project/: SETUP.md  pom.xml
maven_project/app/: Makefile  pom.xml
maven_project/app/src/main/c++/: main.cpp
maven_project/app/src/test/c++/: app_test.cpp
maven_project/math/: Makefile  pom.xml
maven_project/math/src/main/c++/: math.cpp
maven_project/math/src/main/include/: math.h
maven_project/math/src/test/c++/: math_test.cpp
maven_project/read/: Makefile  pom.xml
maven_project/write/: Makefile  pom.xml
maven_project/write/src/test/c++/: write_test.cpp
