###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "cpp_project",
    version = "1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(
    name = "googletest",
    version = "1.16.0",
    repo_name = "googletest",
)

single_version_override(
    module_name = "rules_cc",
    version = "0.2.17",
)
